# mzt

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
examples/: abs  abs.fs  abs.s  add  add.fs  add.s  arith  arith.fs  arith.s  array-sum.fs  bench-fib  bench-fib.fs  bench-fib.s  bench-pi  bench-pi.fs  bench-pi.s  buffer.fs  constant-area.fs  countdown  countdown.fs  countdown.s  counter.fs  do-count.fs  do-leave.fs  do-nested.fs  do-sum.fs  fact  fact.fs  fact.s  greet  greet.fs  greet.s  hello  hello-text  hello-text.fs  hello-text.s  hello.s  ifelse  ifelse.fs  ifelse.s  (+28 more)
examples/corgi/: README.md  (+9 more)
scripts/: regen_jit_reference.py  verify_jit_encodings.py
tests/: _jit_reference_data.py  asm_runner.py  jit_reference_encodings.txt  jit_runner.py  test_benchmarks_compile.py  test_builder.py  test_cli.py  test_cli_repl.py  test_compiler.py  test_constant.py  test_control_flow_semantics.py  test_control_stack.py  test_corgi_example.py  test_dictionary.py  test_do_loop_compile.py  test_do_loop_examples.py  test_do_loop_semantics.py  test_e2e.py  test_emitter.py  test_execute_semantics.py  test_forth.py  test_forth_test_runner.py  test_include_compiler.py  test_include_resolver.py  test_incremental_compile.py  test_iteration_patterns.py  test_jit_assembler.py  test_jit_dispatch.py  test_jit_emitter.py  test_jit_emitter_unicorn.py  test_jit_executor.py  test_jit_host_lib.py  test_jit_primitive_table.py  test_jit_region.py  test_jit_repl_executor.py  test_memory_compiler.py  test_noname.py  test_peephole.py  test_primitive_semantics.py  test_primitives.py  (+15 more)
(+38 files in other folders)
