[project]
name = "mzt"
version = "0.0.1"
description = "Forth-like cross-compiler for Apple Silicon — Mach-O ARM64"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mzt = "mzt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mzt"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "unicorn>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
pythonpath = ["src"]
addopts = "-ra"
